<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_note_add"
        android:title="添加 / 导入"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_add_subscription" android:title="@string/hui_add_subscription" />
            <item android:id="@+id/action_scan_qr_code" android:title="@string/add_profile_methods_scan_qr_code" />
            <item android:id="@+id/action_import_clipboard" android:title="@string/action_import" />
            <item android:id="@+id/action_import_url" android:title="@string/hui_import_url" />
            <item android:id="@+id/action_import_file" android:title="@string/action_import_file" />
            <item android:id="@+id/action_import_meta_file" android:title="导入 Meta / Mihomo YAML 文件" />
            <item android:id="@+id/action_import_meta_url" android:title="导入 Meta / Mihomo URL" />
            <item android:title="@string/add_profile_methods_manual_settings">
                <menu>
                    <item android:id="@+id/action_new_socks" android:title="@string/action_socks" />
                    <item android:id="@+id/action_new_http" android:title="@string/action_http" />
                    <item android:id="@+id/action_new_ss" android:title="@string/action_shadowsocks" />
                    <item android:id="@+id/action_new_vmess" android:title="@string/action_vmess" />
                    <item android:id="@+id/action_new_vless" android:title="VLESS" />
                    <item android:id="@+id/action_new_trojan" android:title="@string/action_trojan" />
                    <item android:id="@+id/action_new_trojan_go" android:title="@string/action_trojan_go" />
                    <item android:id="@+id/action_new_mieru" android:title="@string/action_mieru" />
                    <item android:id="@+id/action_new_naive" android:title="@string/action_naive" />
                    <item android:id="@+id/action_new_hysteria" android:title="@string/action_hysteria" />
                    <item android:id="@+id/action_new_tuic" android:title="@string/action_tuic" />
                    <item android:id="@+id/action_new_shadowtls" android:title="@string/action_shadowtls" />
                    <item android:id="@+id/action_new_anytls" android:title="@string/action_anytls" />
                    <item android:id="@+id/action_new_ssh" android:title="@string/action_ssh" />
                    <item android:id="@+id/action_new_wg" android:title="@string/action_wireguard" />
                    <item android:id="@+id/action_new_config" android:title="@string/custom_config" />
                    <item android:id="@+id/action_new_chain" android:title="@string/proxy_chain" />
                </menu>
            </item>
            <item android:id="@+id/action_new_group" android:title="@string/group_create" />
        </menu>
    </item>
    <item
        android:id="@+id/action_update_all"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/update_all_subscription"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_raw_config"
        android:icon="@drawable/ic_action_description"
        android:title="编辑原始配置"
        app:showAsAction="never" />
</menu>
